fix overflow-x

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -22,7 +22,7 @@
 *
 */
 
-body, p, a {
+html, body, p, a {
   margin: 0;
   padding: 0;
 }
@@ -31,6 +31,7 @@ body {
   font-family: "Nunito", Helvetica, Arial, sans-serif;
   background: var(--white);
   color: var(--text);
+  overflow-x: hidden;
 }
 
 a {
